# speakin

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
scripts/: gen_icons.py  make-portable-zip.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  main.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/src/: asr.rs  audio.rs  filler.rs  hotkey.rs  input.rs  lib.rs  loopback.rs  main.rs  protocol.rs  replacements.rs  storage.rs
src-tauri/src/ai/: client.rs  default_prompts.json  mod.rs  prompts.rs  providers.rs
src-tauri/src/asr/: dashscope.rs  doubao.rs  mod.rs  qwen.rs
src-tauri/windows/: hooks.nsh
src/components/: AboutDialog.tsx  CloseDialog.tsx  NetworkLog.tsx  OceanWave.tsx  OnboardingDialog.tsx  RecentTranscripts.tsx  RecordingOverlay.tsx  Settings.tsx  ThemeToggle.tsx  TitleBar.tsx  VoicePanel.tsx
src/components/settings/: AiOptimizeTab.tsx  AiProvidersTab.tsx  AsrSettingsTab.tsx  PromptsTab.tsx  StatsTab.tsx
src/components/ui/: RadioGroup.tsx  Select.tsx  Slider.tsx  Toggle.tsx  Tooltip.tsx  select-primitives.tsx
src/lib/: ai-providers.ts  hotkey.ts  overlay.ts  prompts.ts  replacements.ts  sounds.ts  theme-colors.ts
