[package]
name = "voice-input-app"
version = "0.1.0"
description = "Voice Input App - Doubao ASR powered voice-to-text"
authors = ["afengtech"]
edition = "2021"

[lib]
name = "voice_input_app_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
cpal = "0.15"
flate2 = "1"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
arboard = "3"
enigo = "0.5"
rubato = "0.16"
dotenvy = "0.15"
rdev = { version = "0.5", features = ["unstable_grab"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3
